# asian-diceware

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
data/sources/: README.md  freq_en.txt  loanwords_seed.csv  proper_nouns.txt  quality_exclude.txt
output/: asian_diceware_1296.txt  asian_diceware_1296_dice.txt  asian_diceware_7776.txt  asian_diceware_7776_dice.txt  audit_report.json
scripts/: audit.sh  gen_freq_snapshot.py  make_booklet.py  make_booklet.sh  run_pipeline.sh
src/asian_diceware/: __init__.py  assemble.py  cli.py  collect.py  common.py  filter_quality.py  normalize.py  prune.py  validate.py
tests/: test_pipeline.py  test_wordlist.py
