[project]
name = "asian-diceware"
version = "0.3.1"
description = "EFF-compatible Diceware wordlist blending common English with dictionary-attested Asian loanwords"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "anoni.net" }]
dependencies = []

[project.optional-dependencies]
# Only needed to (re)generate the vendored frequency snapshot in data/sources/.
# The pipeline itself runs offline against the vendored snapshot and needs none of these.
snapshot = ["wordfreq>=3.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]
# Only needed to render the printable booklet PDF (scripts/make_booklet.py).
booklet = ["weasyprint>=60", "segno>=1.6"]

[project.scripts]
asian-diceware = "asian_diceware.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asian_diceware"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The booklet generator embeds HTML/CSS as string literals; those lines are
# intentionally long (wrapping CJK strings would inject stray spaces).
"scripts/make_booklet.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
